--- a/css/main.css
+++ b/css/main.css
@@ -21,11 +21,20 @@ h2,
 h3 {
   margin: 0;
   font-weight: 400;
+  line-height: 1;
 }
 h1.lg-heading,
 h2.lg-heading,
 h3.lg-heading {
   font-size: 6rem;
+  margin-bottom: 0;
+}
+h1.lg-lastname,
+h2.lg-lastname,
+h3.lg-lastname {
+  font-size: 6rem;
+  color: #eece1a;
+  margin-top: 0;
 }
 h1.sm-heading,
 h2.sm-heading,
@@ -67,6 +76,6 @@ main .icons a:hover {
 main#home {
   overflow: hidden;
 }
-main#home h1 {
+main#home h1.lg-heading {
   margin-top: 20vh;
 }
